# Struggle

./: .gitignore  README.md  key.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wxfjava/struggle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: fh.cpp
app/src/main/java/com/wxfjava/struggle/: App.java  MainActivity.java
app/src/main/java/com/wxfjava/struggle/hotfix/: EnginService.java  FixManager.java  HotfixActivity.java
app/src/main/java/com/wxfjava/struggle/screen/: AutoDpLayout.java  AutoPxLayout.java  ScreenActivity.java
app/src/main/java/com/wxfjava/struggle/utils/: DeviceUtils.java  L.java  ReflexUtils.java  StringAlign.java
app/src/main/java/com/wxfjava/struggle/view/bubble/: DemoVIew.java  DemoView.java
app/src/main/java/com/wxfjava/struggle/view/load/: CircularLoadingView.java
app/src/main/res/layout/: activity_hotfix.xml  activity_main.xml  activity_screen.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wxfjava/struggle/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
